tests/snapshots/core__typed_writer_preserves_entity_refs.snap
---
source: tests/core.rs
expression: output
---
<?xml version="1.0"?>
<?adf version="1.0"?>
<adf>
<prospect>
<customer>
<contact>
<name part="full">A</name>
<email>a@example.com</email></contact>
<comments>Jane &amp; &nbsp; Co</comments></customer></prospect>
</adf>
