tests/snapshots/core__typed_writer_preserves_root_attributes_for_namespaced_extensions.snap
---
source: tests/core.rs
expression: xml
---
<?xml version="1.0"?>
<?adf version="1.0"?>
<adf xmlns:p="urn:partner" p:batch="abc">
<p:meta key="v">x</p:meta>
<prospect></prospect>
</adf>
