tests/snapshots/core__typed_writer_splits_cdata_containing_terminator.snap
---
source: tests/core.rs
expression: output
---
<?xml version="1.0"?>
<?adf version="1.0"?>
<adf>
<prospect>
<customer>
<contact>
<name part="full">A</name>
<email>a@example.com</email></contact>
<comments><![CDATA[before]]]]><![CDATA[>after]]></comments></customer></prospect>
</adf>
