tests/snapshots/core__validate_strict_keeps_bad_iso_shapes_as_warnings.snap
---
source: tests/core.rs
expression: "normalized_issues(input, &report)"
---
warning|adf.prospect[0].requestdate|date "9999-99-99T99:99:99" is not in the supported ISO 8601 datetime shape|<requestdate>9999-99-99T99:99:99</requestdate>
warning|adf.prospect[0].customer.contact[0].address[0].country|country "USA" is not shaped like a 2-letter ISO 3166-1 alpha-2 code|<country>USA</country>
warning|adf.prospect[0].vehicle[0].price[0]@currency|currency "usd" is not shaped like a 3-letter ISO 4217 code|<price type="quote" currency="usd">1</price>
