tests/snapshots/core__validate_strict_promotes_required_fields_to_errors.snap
---
source: tests/core.rs
expression: "normalized_issues(input, &strict)"
---
error|adf.prospect[0]|prospect is missing requestdate|<prospect><customer><contact /></customer></prospect>
error|adf.prospect[0]|prospect is missing vehicle|<prospect><customer><contact /></customer></prospect>
error|adf.prospect[0]|prospect is missing vendor|<prospect><customer><contact /></customer></prospect>
error|adf.prospect[0].customer.contact[0]|contact is missing name|<contact />
warning|adf.prospect[0].customer.contact[0]|contact should contain email or phone|<contact />
